# crm

./: CHANGELOG.md  Cargo.toml  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs  mod.rs
crm-send/: Cargo.toml  build.rs  send.yml
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: mod.rs
crm-send/src/pb/: notification.rs
crm/src/: client.rs  main.rs  server.rs
crm/src/pb/: crm.rs
protos/: crm.proto
protos/crm/: crm.proto
protos/metadata/: messages.proto  rpc.proto
protos/notification/: mess.proto  rpc.proto
protos/user-stats/: message.proto  rpc.proto
user-stat/: .env  Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: gen.rs
user-stat/migrations/: 20241026102315_init.sql
user-stat/src/: config.rs  lib.rs  main.rs  server.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: mod.rs  user_stats.rs
