[workspace]

members = ["crm"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.91"
prost = "0.13.3"
prost-types = "0.13.3"
prost-build = "0.13.3"
tonic = "0.12.3"
tonic-build = "0.12.3"

