[workspace]

members = ["crm", "user-stat"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.91"
prost = "0.13.3"
prost-types = "0.13.3"
prost-build = "0.13.3"
tonic = "0.12.3"
tonic-build = "0.12.3"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
serde = { version = "1.0.213", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
proto-builder-trait = "0.6.2"
serde_yaml = "0.9.34"