[workspace]

members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.16"
anyhow = "1.0.91"
prost = "0.13.3"
prost-types = "0.13.3"
prost-build = "0.13.3"
tonic = "0.12.3"
tonic-build = "0.12.3"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
serde = { version = "1.0.213", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.2"
futures = "0.3.31"
itertools = "0.13.0"
rand = "0.8.5"
proto-builder-trait = "0.6.2"
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
fake = { version = "2.10.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"