[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
tonic = {workspace = true}
tokio = { workspace = true}
sqlx = {workspace = true}
serde = {workspace = true}
chrono = { workspace = true }
rand = "0.8.5"
derive_builder = "0.20.2"
futures = "0.3.31"
serde_yaml = {workspace = true}
itertools = "0.13.0"
tracing = {workspace = true}
tracing-subscriber = { workspace = true }
tokio-stream = "0.1.16"
[dev-dependencies]

fake = { version = "2.10.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
[build-dependencies]
anyhow = { workspace = true }
tonic-build = {workspace = true}
prost-build = {workspace = true}
proto-builder-trait ={workspace = true}

