[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"

[dependencies]
fake = {workspace = true}
nanoid = {workspace = true}
anyhow = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
tonic = {workspace = true}
tokio = { workspace = true}
sqlx = {workspace = true}
serde = {workspace = true}
chrono = { workspace = true }
rand = "0.8.5"
derive_builder = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }

serde_yaml = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
tonic-build = {workspace = true}
prost-build = {workspace = true}
proto-builder-trait ={workspace = true}

