[package]
name = "crm"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "client"
path = "src/client.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
prost-build = {workspace = true}
tonic = {workspace = true}
tonic-build = {workspace = true}
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
[build-dependencies]

anyhow = { workspace = true }
tonic-build = {workspace = true}
prost-build = {workspace = true}