[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
tonic = {workspace = true}
tokio = { workspace = true}
sqlx = {workspace = true}
serde = {workspace = true}
chrono = { workspace = true }
rand = "0.8.5"

[dev-dependencies]
fake = { version = "2.10.0", features = ["derive", "chrono"] }
nanoid = "0.4.0"
