[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
tonic = {workspace = true}
tokio = { workspace = true}
sqlx = {workspace = true}
serde = {workspace = true}
chrono = { workspace = true }
rand = "0.8.5"
derive_builder = "0.20.2"
futures = "0.3.31"
serde_yaml = {workspace = true}
itertools = "0.13.0"
tracing = {workspace = true}
tracing-subscriber = { workspace = true }
[dev-dependencies]

fake =  { workspace = true }
nanoid = {workspace = true}
[build-dependencies]
anyhow = { workspace = true }
tonic-build = {workspace = true}
prost-build = {workspace = true}
proto-builder-trait ={workspace = true}
